Improve error handling on dashboard cards

--- a/src/app/charts/transaction-summary/transaction-summary.component.html
+++ b/src/app/charts/transaction-summary/transaction-summary.component.html
@@ -10,11 +10,16 @@
     </md-menu>
   </div>
 
-  <div [class.invisible]="!loaded || (!summaries || summaries.length === 0)">
-    <chart style="display: block" type="StockChart" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
-  </div>
-  <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!summaries || summaries.length === 0)"> No Transactions Found</div>
-  <md-spinner *ngIf="!loaded"></md-spinner>
+  <server-error-message (refresh)="refreshData()" *ngIf="serverError; else data"></server-error-message>
 
-  <div class="dashboard__table-chart__actions"><span [routerLink]="['/reports', 'transaction']">VIEW MORE</span></div>
+  <ng-template #data>
+    <div [class.invisible]="!loaded || (!summaries || summaries.length === 0)">
+      <chart style="display: block" type="StockChart" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
+    </div>
+    <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!summaries || summaries.length === 0)"> No Transactions Found</div>
+    <md-spinner *ngIf="!loaded"></md-spinner>
+
+    <div class="dashboard__table-chart__actions"><span [routerLink]="['/reports', 'transaction']">VIEW MORE</span></div>
+  </ng-template>
+
 </div>
