--- a/src/app/pages/dashboard-page/events-summary/events-summary.component.html
+++ b/src/app/pages/dashboard-page/events-summary/events-summary.component.html
@@ -10,11 +10,16 @@
     </md-menu>
   </div>
 
-  <div [class.invisible]="!loaded || (!events || events.length === 0)">
-    <chart #chartI [options]="options" (load)="loadChart(chartI)"></chart>
-  </div>
-  <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!events || events.length === 0)"> No Events Found</div>
-  <md-spinner *ngIf="!loaded"></md-spinner>
+  <server-error-message (refresh)="refreshData()" *ngIf="serverError; else data"></server-error-message>
 
-  <div class="dashboard__table-chart__actions"><span [routerLink]="['/coming-soon']">VIEW MORE</span></div>
+  <ng-template #data>
+    <div [class.invisible]="!loaded || (!events || events.length === 0)">
+      <chart #chartI [options]="options" (load)="loadChart(chartI)"></chart>
+    </div>
+
+    <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!events || events.length === 0)"> No Events Found</div>
+    <md-spinner *ngIf="!loaded"></md-spinner>
+
+    <div class="dashboard__table-chart__actions"><span [routerLink]="['/coming-soon']">VIEW MORE</span></div>
+  </ng-template>
 </div>
