--- a/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
@@ -43,29 +43,33 @@
       </div>
     </div>
 
-    <div class="perfect-entity__table" *ngIf="transactions; else spinTransactions">
-      <div class="perfect-entity__table__title">Recent transactions</div>
 
-      <table class="highlight">
-        <thead>
-        <tr>
-          <th>Alias</th>
-          <th class="cell--align-right">Amount</th>
-          <th>Processor Response</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let transaction of transactions" [routerLink]="['/transactions', transaction.id]">
-          <td>{{transaction.alias}}</td>
-          <td class="cell--align-right">{{transaction.amount.usd()}}</td>
-          <td>{{transaction.processorResponse.message}}</td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
+    <server-error-message *ngIf="transactionsServerError; else transactionsData;"></server-error-message>
+    <ng-template #transactionsData>
+      <div class="perfect-entity__table" *ngIf="transactions; else spinTransactions">
+        <div class="perfect-entity__table__title">Recent transactions</div>
 
-    <ng-template #spinTransactions>
-      <!--<md-spinner></md-spinner>-->
+        <table class="highlight">
+          <thead>
+          <tr>
+            <th>Alias</th>
+            <th class="cell--align-right">Amount</th>
+            <th>Processor Response</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let transaction of transactions" [routerLink]="['/transactions', transaction.id]">
+            <td>{{transaction.alias}}</td>
+            <td class="cell--align-right">{{transaction.amount.usd()}}</td>
+            <td>{{transaction.processorResponse.message}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <ng-template #spinTransactions>
+        <md-spinner></md-spinner>
+      </ng-template>
     </ng-template>
 
     <div class="perfect-entity__list">
