--- a/src/app/pages/customers-page/customer-view/customer-notes/customer-notes.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-notes/customer-notes.component.html
@@ -44,8 +44,11 @@
         </div>
       </div>
 
-      <md-spinner class="entity-view__spinner" *ngIf="loadingData"></md-spinner>
-      <div class="entity-view__no-results customer-view__no-results entity-view__no-results--small-padding" *ngIf="!loadingData && (!notes || notes.length === 0)">No customer notes found</div>
+      <server-error-message (refresh)="refreshData()" *ngIf="serverError; else message"></server-error-message>
+      <ng-template #message>
+        <md-spinner class="entity-view__spinner" *ngIf="loadingData"></md-spinner>
+        <div class="entity-view__no-results customer-view__no-results entity-view__no-results--small-padding" *ngIf="!loadingData && (!notes || notes.length === 0)">No customer notes found</div>
+      </ng-template>
     </div>
 
   </md-card-content>
