--- a/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
@@ -40,8 +40,11 @@
     </tbody>
   </table>
 
-  <md-spinner class="entity-view__spinner" *ngIf="loadingData && (!entities || entities.length === 0)"></md-spinner>
-  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No transactions found</div>
+  <server-error-message (refresh)="refreshData()" *ngIf="serverError; else messages"></server-error-message>
+  <ng-template #messages>
+    <md-spinner class="entity-view__spinner" *ngIf="loadingData"></md-spinner>
+    <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No transactions found</div>
+  </ng-template>
 
   <table-pagination
     [limit]="limit"
