--- a/src/app/pages/customers-page/customers-index/customers.component.html
+++ b/src/app/pages/customers-page/customers-index/customers.component.html
@@ -12,6 +12,7 @@
         [data]="entities"
         [columnParams]="columnParams"
         [filterString]="filterValue"
+        [serverError]="serverError"
         (selected)="viewEntity($event.id)"
 
         [service]="service"
@@ -20,6 +21,7 @@
         (exportClicked)="exportEntity($event.id)"
         (editClicked)="editEntity($event.id)"
         (deleteClicked)="deleteEntity($event.id)"
+        (refreshData)="refreshData()"
 
         [limit]="limit"
         [paginationValues]="paginationValues"
