--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -13,6 +13,7 @@
         [data]="entities"
         [columnParams]="columnParams"
         [filterString]="filterValue"
+        [serverError]="serverError"
         (selected)="viewEntity($event.id)"
 
         [service]="service"
@@ -21,6 +22,7 @@
         (exportClicked)="exportEntity($event.id)"
         (editClicked)="editEntity($event.id)"
         (deleteClicked)="deleteEntity($event.id)"
+        (refreshData)="refreshData()"
 
         [limit]="limit"
         [paginationValues]="paginationValues"
