Dont show table menu if there are no options

--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -4,10 +4,14 @@
     <md-input-container *ngIf="filterEnabled" class="entity-view__table-component__header__filter">
       <input md-input placeholder="Filter" [(ngModel)]="filterString" type="text">
     </md-input-container>
-    <md-icon class="entity-view__table-component__header__action" [class.alone]="!filterEnabled" [md-menu-trigger-for]="optionsMenu">more_vert</md-icon>
-    <md-menu #optionsMenu="mdMenu" x-position="before">
-      <button *ngIf="associationEnabled" md-menu-item (click)="showAssociateDialog()">{{textOptions.associateOptionText || 'Associate ' + title}}</button>
-    </md-menu>
+
+    <md-icon *ngIf="!associationEnabled; else tableMenu" class="entity-view__table-component__header__action" [class.alone]="!filterEnabled">more_vert</md-icon>
+    <ng-template #tableMenu>
+      <md-icon class="entity-view__table-component__header__action" [class.alone]="!filterEnabled" [md-menu-trigger-for]="optionsMenu">more_vert</md-icon>
+      <md-menu #optionsMenu="mdMenu" x-position="before">
+        <button md-menu-item (click)="showAssociateDialog()">{{textOptions.associateOptionText || 'Associate ' + title}}</button>
+      </md-menu>
+    </ng-template>
   </div>
   <table class="highlight table__custom">
     <thead>
